projects/compiler/test/parser/functiondecl_error_no_parens.out
Error at %FILE_NAME%:1:10
Unexpected token '=', expected '(':
  |  func abc = "abc"
              ^